--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,14 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "BASE_URL", "\"https://disqus.com/\""
+        buildConfigField "String", "BASE_API_URL", "\"https://disqus.com/api/3.0/\""
+
+        buildConfigField "String", "CLIENT_ID", "\"QC6s13EPF1vkzhein4WRpxqVr91zlNoVnLH6ImSa7UPBK5I0T7WKPCtZMYd9IC1l\""
+        buildConfigField "String", "CLIENT_SECRET", "\"HKdJ6pvWjzqrAIaMvy70hXmIhUeBcMrVgjA9VClGArZgTu8XLx2iLyFwVYpAv0Dv\""
+        buildConfigField "String", "REDIRECT_URI", "\"http://www.example.com/oauth_redirect\""
+        buildConfigField "String", "OAUTH_SCOPE", "\"read,write\""
     }
 
     buildTypes {
