--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,23 @@
 
 buildscript {
     ext.kotlin_version = '1.3.21'
+
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://plugins.gradle.org/m2/" }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.0.0-RC14"
     }
 }
 
 allprojects {
+    apply from: "$rootDir/detekt.gradle"
+
     repositories {
         google()
         jcenter()
