--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,7 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
 
     // Navigation
-    implementation 'com.github.aartikov.Alligator:alligator:3.0.0'
-    kapt 'com.github.aartikov.Alligator:alligator-compiler:3.0.0'
+    implementation 'ru.terrakok.cicerone:cicerone:5.0.0'
 
     // Image Loading
     implementation 'com.github.bumptech.glide:glide:4.9.0'
