--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.versions = [
+            'compileSdk'      : 28,
+            'minSdk'          : 21,
+            'targetSdk'       : 28,
+
+            'kotlin'          : '1.3.30',
+            'material'        : '1.0.0',
+            'appCompat'       : '1.0.2',
+            'androidX'        : '1.0.0',
+            'constraintLayout': '1.1.3',
+            'archLifecycle'   : '2.0.0',
+            'dagger'          : '2.22.1',
+            'rxJava'          : '2.2.8',
+            'rxKotlin'        : '2.3.0',
+            'rxAndroid'       : '2.1.1',
+            'retrofit'        : '2.5.0',
+            'okhttp'          : '3.14.1',
+            'moshi'           : '1.8.0',
+            'cicerone'        : '5.0.0',
+            'glide'           : '4.9.0',
+            'threeTenAbp'     : '1.2.0',
+            'androidKtx'      : '1.0.1',
+            'anko'            : '0.10.8',
+            'detekt'          : '1.0.0-RC14',
+            'timber'          : '4.7.1',
+            'leakCanary'      : '1.6.3'
+    ]
 
     repositories {
         google()
@@ -11,8 +37,8 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.0.0-RC14"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:${versions.detekt}"
     }
 }
 
