--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ buildscript {
             'minSdk'          : 21,
             'targetSdk'       : 28,
 
-            'kotlin'          : '1.3.31',
-            'material'        : '1.0.0',
-            'appCompat'       : '1.0.2',
-            'androidX'        : '1.0.0',
-            'constraintLayout': '1.1.3',
-            'archLifecycle'   : '2.0.0',
-            'dagger'          : '2.23.1',
+            'kotlin'          : '1.3.40',
+            'material'        : '1.1.0-alpha07',
+            'appCompat'       : '1.1.0-beta01',
+            'recyclerView'    : '1.1.0-alpha06',
+            'constraintLayout': '2.0.0-beta1',
+            'archLifecycle'   : '2.2.0-alpha01',
+            'dagger'          : '2.23.2',
             'rxJava'          : '2.2.9',
             'rxKotlin'        : '2.3.0',
             'rxAndroid'       : '2.1.1',
