--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:${versions.rxJava}"
     implementation "io.reactivex.rxjava2:rxkotlin:${versions.rxKotlin}"
     implementation "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}"
+    implementation "com.jakewharton.rxrelay2:rxrelay:${versions.rxRelay}"
 
     // Network
     implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
