Add Stetho, debugger for network, database and shared preferences

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
 
     // Dev Tools
     implementation "com.jakewharton.timber:timber:${versions.timber}"
+    implementation "com.facebook.stetho:stetho:${versions.stetho}"
+    implementation "com.facebook.stetho:stetho-okhttp3:${versions.stetho}"
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}"
     debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:${versions.leakCanary}"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakCanary}"
