--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
             'anko'            : '0.10.8',
             'detekt'          : '1.0.0-RC15',
             'timber'          : '4.7.1',
+            'stetho'          : '1.5.1',
             'leakCanary'      : '1.6.3'
     ]
 
