--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
             'minSdk'          : 21,
             'targetSdk'       : 28,
 
+            'androidGradle'   : '3.4.1',
             'kotlin'          : '1.3.40',
             'material'        : '1.1.0-alpha07',
             'appCompat'       : '1.1.0-beta01',
@@ -38,7 +39,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath "com.android.tools.build:gradle:${versions.androidGradle}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:${versions.detekt}"
     }
