--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,12 @@ buildscript {
             'targetSdk'       : 28,
 
             'androidGradle'   : '3.4.1',
-            'kotlin'          : '1.3.40',
+            'kotlin'          : '1.3.41',
             'material'        : '1.1.0-alpha07',
-            'appCompat'       : '1.1.0-beta01',
-            'recyclerView'    : '1.1.0-alpha06',
+            'appCompat'       : '1.1.0-rc01',
+            'recyclerView'    : '1.1.0-beta01',
             'constraintLayout': '2.0.0-beta2',
-            'archLifecycle'   : '2.2.0-alpha01',
+            'archLifecycle'   : '2.2.0-alpha02',
             'dagger'          : '2.23.2',
             'rxJava'          : '2.2.10',
             'rxKotlin'        : '2.3.0',
