--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:${versions.appCompat}"
     implementation "androidx.recyclerview:recyclerview:${versions.recyclerView}"
     implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
+    implementation "com.github.razir.progressbutton:progressbutton:${versions.progressButton}"
 
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:${versions.archLifecycle}"
