--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,10 @@ dependencies {
     // UI
     implementation "com.google.android.material:material:${versions.material}"
     implementation "androidx.appcompat:appcompat:${versions.appCompat}"
+    implementation "androidx.fragment:fragment-ktx:${versions.fragment}"
     implementation "androidx.recyclerview:recyclerview:${versions.recyclerView}"
     implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
     implementation "com.github.razir.progressbutton:progressbutton:${versions.progressButton}"
-
-    // Lifecycle
-    implementation "androidx.lifecycle:lifecycle-extensions:${versions.archLifecycle}"
 
     // DI
     implementation "com.google.dagger:dagger:${versions.dagger}"
