--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ buildscript {
             'kotlin'          : '1.3.41',
             'material'        : '1.1.0-alpha07',
             'appCompat'       : '1.1.0-rc01',
+            'fragment'        : '1.2.0-alpha01',
             'recyclerView'    : '1.1.0-beta01',
             'constraintLayout': '2.0.0-beta2',
             'progressButton'  : '1.0.3',
-            'archLifecycle'   : '2.2.0-alpha02',
             'dagger'          : '2.23.2',
             'rxJava'          : '2.2.10',
             'rxKotlin'        : '2.3.0',
