--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ buildscript {
             'threeTenAbp'     : '1.2.1',
             'androidKtx'      : '1.2.0-alpha02',
             'anko'            : '0.10.8',
-            'detekt'          : '1.0.0-RC15',
+            'detekt'          : '1.0.0-RC16',
             'timber'          : '4.7.1',
             'stetho'          : '1.5.1',
             'leakCanary'      : '2.0-alpha-3'
@@ -52,6 +52,10 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+    }
+
+    dependencies {
+        detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:${versions.detekt}"
     }
 }
 
