--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.versions = [
+            'buildTools'      : '28.0.3',
             'compileSdk'      : 28,
             'minSdk'          : 21,
             'targetSdk'       : 28,
