Ignore fastline files from Git

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,13 @@ captures/
 # Google Services (e.g. APIs or Firebase)
 # google-services.json
 
+# fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+fastlane/readme.md
+
 # Version control
 vcs.xml
 
