--- a/.editorconfig
+++ b/.editorconfig
@@ -12,3 +12,5 @@ max_line_length = 120
 [*.{kt, kts}]
 indent_style = space
 indent_size = 4
+# Custom ktlint properties
+disabled_rules = import-ordering
