--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,17 +101,12 @@ dependencies {
     implementation "org.jetbrains.anko:anko-commons:${versions.anko}"
     implementation "org.jetbrains.anko:anko-support-v4-commons:${versions.anko}"
 
-    // ----- Dev Tools ----- //
-    // Code Quality
+    // Dev Tools
     ktlint "com.pinterest:ktlint:${versions.ktlint}"
-    // Logger
     implementation "com.jakewharton.timber:timber:${versions.timber}"
-    // Debug Bridge
     implementation "com.facebook.stetho:stetho:${versions.stetho}"
     implementation "com.facebook.stetho:stetho-okhttp3:${versions.stetho}"
-    // Memory Leaks
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}"
-    // ----- Dev Tools ----- //
 }
 
 task ktlint(type: JavaExec, group: "verification") {
@@ -119,9 +114,6 @@ task ktlint(type: JavaExec, group: "verification") {
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
     args "src/**/*.kt"
-    // to generate report in checkstyle format prepend following args:
-    // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
-    // see https://github.com/pinterest/ktlint#usage for more
 }
 check.dependsOn ktlint
 
