--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Run ktlint
+          command: ./gradlew ktlint
+      - run:
           name: Run Lint
           command: ./gradlew lint
       - store_artifacts:
