--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,12 @@ captures/
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
 
+# Release files
+app/release
+
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
+*.jks
 #*.keystore
 keystore.properties
 
