Add Firebase Core

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ keystore.properties
 .externalNativeBuild
 
 # Google Services (e.g. APIs or Firebase)
-# google-services.json
+google-services.json
 
 # fastlane
 fastlane/report.xml
