--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
@@ -78,6 +79,9 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:${versions.fragment}"
     implementation "androidx.recyclerview:recyclerview:${versions.recyclerView}"
     implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
+
+    // Firebase
+    implementation "com.google.firebase:firebase-core:${versions.firebaseCore}"
 
     // Custom Views
     implementation "com.github.razir.progressbutton:progressbutton:${versions.progressButton}"
