--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
@@ -43,6 +44,7 @@ android {
             applicationIdSuffix ".debug"
             versionNameSuffix "-debug"
             debuggable true
+            manifestPlaceholders = [enableCrashReporting: "false"]
         }
 
         release {
@@ -50,6 +52,7 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+            manifestPlaceholders = [enableCrashReporting: "true"]
         }
     }
 
@@ -124,6 +127,7 @@ dependencies {
     // Dev Tools
     ktlint "com.pinterest:ktlint:${versions.ktlint}"
     implementation "com.jakewharton.timber:timber:${versions.timber}"
+    implementation "com.crashlytics.sdk.android:crashlytics:${versions.crashlytics}"
     implementation "com.facebook.stetho:stetho:${versions.stetho}"
     implementation "com.facebook.stetho:stetho-okhttp3:${versions.stetho}"
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}"
