--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ buildscript {
             'anko'            : '0.10.8',
             'ktlint'          : '0.34.2',
             'timber'          : '4.7.1',
+            'crashlytics'     : '2.10.1',
             'stetho'          : '1.5.1',
             'leakCanary'      : '2.0-alpha-3'
     ]
@@ -37,12 +38,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'io.fabric.tools:gradle:1.31.0'
     }
 }
 
