--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
             'targetSdk'       : 28,
 
             'kotlin'          : '1.3.41',
-            'material'        : '1.1.0-alpha08',
+            'material'        : '1.1.0-alpha09',
             'appCompat'       : '1.1.0-rc01',
             'fragment'        : '1.2.0-alpha01',
             'recyclerView'    : '1.1.0-beta01',
@@ -32,7 +32,7 @@ buildscript {
             'timber'          : '4.7.1',
             'crashlytics'     : '2.10.1',
             'stetho'          : '1.5.1',
-            'leakCanary'      : '2.0-alpha-3'
+            'leakCanary'      : '2.0-beta-1'
     ]
 
     repositories {
