--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,10 @@ android {
         targetCompatibility 1.8
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     androidExtensions {
         experimental = true
     }
@@ -79,6 +83,8 @@ dependencies {
     // Android UI
     implementation "com.google.android.material:material:${versions.material}"
     implementation "androidx.appcompat:appcompat:${versions.appCompat}"
+    implementation "androidx.activity:activity:${versions.activity}"
+    implementation "androidx.fragment:fragment:${versions.fragment}"
     implementation "androidx.fragment:fragment-ktx:${versions.fragment}"
     implementation "androidx.recyclerview:recyclerview:${versions.recyclerView}"
     implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
