--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ buildscript {
             'kotlin'          : '1.3.41',
             'material'        : '1.1.0-alpha09',
             'appCompat'       : '1.1.0-rc01',
-            'fragment'        : '1.2.0-alpha01',
-            'recyclerView'    : '1.1.0-beta01',
+            'activity'        : '1.1.0-alpha02',
+            'fragment'        : '1.2.0-alpha02',
+            'recyclerView'    : '1.1.0-beta02',
             'constraintLayout': '2.0.0-beta2',
             'firebaseCore'    : '17.0.1',
             'progressButton'  : '1.0.3',
@@ -28,7 +29,7 @@ buildscript {
             'cicerone'        : '5.0.0',
             'glide'           : '4.9.0',
             'threeTenAbp'     : '1.2.1',
-            'androidKtx'      : '1.2.0-alpha02',
+            'androidKtx'      : '1.2.0-alpha03',
             'anko'            : '0.10.8',
             'ktlint'          : '0.34.2',
             'timber'          : '4.7.1',
@@ -46,7 +47,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.21.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.22.0'
         classpath 'com.google.gms:google-services:4.3.0'
         classpath 'io.fabric.tools:gradle:1.31.0'
     }
