--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,14 +80,15 @@ dependencies {
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
 
-    // Android UI
+    // AndroidX
     implementation "com.google.android.material:material:${versions.material}"
-    implementation "androidx.appcompat:appcompat:${versions.appCompat}"
     implementation "androidx.activity:activity:${versions.activity}"
+    implementation "androidx.appcompat:appcompat:${versions.appCompat}"
+    implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
+    implementation "androidx.core:core-ktx:${versions.core}"
     implementation "androidx.fragment:fragment:${versions.fragment}"
     implementation "androidx.fragment:fragment-ktx:${versions.fragment}"
     implementation "androidx.recyclerview:recyclerview:${versions.recyclerView}"
-    implementation "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
 
     // Firebase
     implementation "com.google.firebase:firebase-core:${versions.firebaseCore}"
@@ -126,7 +127,6 @@ dependencies {
     implementation "com.jakewharton.threetenabp:threetenabp:${versions.threeTenAbp}"
 
     // Extensions
-    implementation "androidx.core:core-ktx:${versions.androidKtx}"
     implementation "org.jetbrains.anko:anko-commons:${versions.anko}"
     implementation "org.jetbrains.anko:anko-support-v4-commons:${versions.anko}"
 
