--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,12 @@ buildscript {
 
             'kotlin'          : '1.3.41',
             'material'        : '1.1.0-alpha09',
-            'appCompat'       : '1.1.0-rc01',
             'activity'        : '1.1.0-alpha02',
+            'appCompat'       : '1.1.0-rc01',
+            'constraintLayout': '2.0.0-beta2',
+            'core'            : '1.2.0-alpha03',
             'fragment'        : '1.2.0-alpha02',
             'recyclerView'    : '1.1.0-beta03',
-            'constraintLayout': '2.0.0-beta2',
             'firebaseCore'    : '17.1.0',
             'progressButton'  : '1.0.3',
             'htmlTextView'    : '3.6',
@@ -29,7 +30,6 @@ buildscript {
             'cicerone'        : '5.0.0',
             'glide'           : '4.9.0',
             'threeTenAbp'     : '1.2.1',
-            'androidKtx'      : '1.2.0-alpha03',
             'anko'            : '0.10.8',
             'ktlint'          : '0.34.2',
             'timber'          : '4.7.1',
