--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.akhbulatov.discusim"
         minSdkVersion versions.minSdk
         targetSdkVersion versions.targetSdk
-        versionCode 5
-        versionName "1.0.0-beta1"
+        versionCode 6
+        versionName "1.0.0"
         resConfigs "en", "ru"
 
         buildConfigField "String", "BASE_URL", "\"https://disqus.com/\""
