--- a/build.gradle
+++ b/build.gradle
@@ -10,25 +10,25 @@ buildscript {
             'targetSdk'       : 28,
 
             'kotlin'          : '1.3.50',
-            'material'        : '1.1.0-alpha09',
-            'activity'        : '1.1.0-alpha02',
-            'appCompat'       : '1.1.0-rc01',
+            'material'        : '1.1.0-alpha10',
+            'activity'        : '1.1.0-alpha03',
+            'appCompat'       : '1.1.0',
             'constraintLayout': '2.0.0-beta2',
-            'core'            : '1.2.0-alpha03',
-            'fragment'        : '1.2.0-alpha02',
-            'recyclerView'    : '1.1.0-beta03',
-            'firebaseCore'    : '17.1.0',
+            'core'            : '1.2.0-alpha04',
+            'fragment'        : '1.2.0-alpha04',
+            'recyclerView'    : '1.1.0-beta04',
+            'firebaseCore'    : '17.2.0',
             'progressButton'  : '1.0.3',
             'htmlTextView'    : '3.6',
             'dagger'          : '2.24',
-            'rxJava'          : '2.2.11',
+            'rxJava'          : '2.2.12',
             'rxKotlin'        : '2.4.0',
             'rxAndroid'       : '2.1.1',
-            'retrofit'        : '2.6.1',
-            'okhttp'          : '4.1.0',
+            'retrofit'        : '2.6.2',
+            'okhttp'          : '4.2.0',
             'moshi'           : '1.8.0',
             'cicerone'        : '5.0.0',
-            'glide'           : '4.9.0',
+            'glide'           : '4.10.0',
             'threeTenAbp'     : '1.2.1',
             'anko'            : '0.10.8',
             'ktlint'          : '0.34.2',
@@ -47,9 +47,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.22.0'
-        classpath 'com.google.gms:google-services:4.3.1'
-        classpath 'io.fabric.tools:gradle:1.31.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.25.0'
+        classpath 'com.google.gms:google-services:4.3.2'
+        classpath 'io.fabric.tools:gradle:1.31.1'
     }
 }
 
